# medbook-application-core

./: README.md  pyproject.toml
.github/workflows/: ci-release-and-deployment.yml
artefact/: __init__.py
artefact/service/: admin_delete_from_storage.py  api_openfda_service.py  authentication.py  database.py  documents_page_service.py  notifications.py
artefact/ui/gui/: documents_page.py  first_page.py  login_page.py  main_page.py  medication_check_page.py  settings_page.py  sign_up_page.py
artefact/ui/gui/components/: navigation.py  page_header.py
artefact/utils/: traits.py
tests/unit/: test_gui_documents.py  test_gui_first_page.py  test_gui_login_page.py  test_gui_medication_check.py  test_gui_schedule.py
